@@ -1,5 +1,15 @@
 2008-02-15  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
+	* src/cairo-support.c: (murrine_draw_innerborder),
+	(murrine_set_gradient):
+	* src/murrine_draw.c: (murrine_draw_tab):
+	* src/murrine_draw_rgba.c: (murrine_rgba_draw_tab):
+	* src/murrine_style.c: (murrine_set_widget_parameters):
+	* src/murrine_types.h:
+	Simplified gradients's code, I hope that nothing got broken :)
+
+2008-02-15  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
 	* src/animation.h:
 	* src/murrine_draw_rgba.c: (murrine_rgba_draw_tab):
 	* src/murrine_style.c: (murrine_style_draw_box_gap):
